--- a/signin.html
+++ b/signin.html
@@ -1,55 +1,54 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title></title>
 
-    <!-- bootstrap -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <!-- css -->
-    <link rel="stylesheet" href="signup.css">
-    <!-- font awesome -->
-    <script src="https://kit.fontawesome.com/a787da4e00.js" crossorigin="anonymous"></script>
+<head>
+  <meta charset="utf-8">
+  <title></title>
 
-  </head>
-  <body>
+  <!-- bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+    integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+  <!-- css -->
+  <link rel="stylesheet" href="signin.css">
+  <!-- font awesome -->
+  <script src="https://kit.fontawesome.com/a787da4e00.js" crossorigin="anonymous"></script>
+
+</head>
+
+<body>
   <div class="container">
     <div class="row">
       <div class="col-lg-10 col-xl-9 mx-auto">
         <div class="card card-signin flex-row my-5">
           <div class="card-img-left d-none d-md-flex">
-             <!-- Background image for card set in CSS! -->
+            <!-- Background image for card set in CSS! -->
           </div>
           <div class="card-body">
-            <h5 class="card-title text-center">Register</h5>
+            <h5 class="card-title text-center">Sign in</h5>
             <form class="form-signin">
               <div class="form-label-group">
                 <input type="text" id="inputUserame" class="form-control" placeholder="Username" required autofocus>
                 <label for="inputUserame">Username</label>
               </div>
 
-              <div class="form-label-group">
-                <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required>
-                <label for="inputEmail">Email address</label>
-              </div>
 
-              <hr>
+
+
 
               <div class="form-label-group">
                 <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
                 <label for="inputPassword">Password</label>
               </div>
 
-              <div class="form-label-group">
-                <input type="password" id="inputConfirmPassword" class="form-control" placeholder="Password" required>
-                <label for="inputConfirmPassword">Confirm password</label>
-              </div>
 
-              <button class="btn btn-lg btn-primary btn-block text-uppercase register" type="submit">Register</button>
-              <a class="d-block text-center mt-2 small" href="#">Sign In</a>
+
+              <button class="btn btn-lg btn-primary btn-block text-uppercase register" type="submit">Sign in</button>
+              <a class="d-block text-center mt-2 small" href="#">New user? Click here to sign up</a>
               <hr class="my-4">
-              <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i class="fab fa-google mr-2"></i> Sign up with Google</button>
-              <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i class="fab fa-facebook-f mr-2"></i> Sign up with Facebook</button>
+              <button class="btn btn-lg btn-google btn-block text-uppercase" type="submit"><i
+                  class="fab fa-google mr-2"></i> Sign in with Google</button>
+              <button class="btn btn-lg btn-facebook btn-block text-uppercase" type="submit"><i
+                  class="fab fa-facebook-f mr-2"></i> Sign in with Facebook</button>
             </form>
           </div>
         </div>
@@ -57,4 +56,5 @@
     </div>
   </div>
 </body>
+
 </html>
